[package]
name = "mls-test-cli"
version = "0.7.0"
edition = "2021"

[dependencies]
openmls = { version = "0.20.0" }
openmls_traits = { version = "0.1" }
openmls_rust_crypto = { version = "0.1" }
openmls_basic_credential = { version = "0.1"}
tls_codec = { version = "0.3.0-pre.1", features = ["derive", "serde", "mls"] }
futures-lite = "1.12"
async-trait = "0.1"
sha256 = "<1.2"
hex = "0.4"

base64 = "0.13.0"
uuid = "1.0.0-alpha"
clap = { version = "3", features = ["derive"] }
serde = "1.0.96"
serde_json = "1.0.96"

[patch.crates-io.openmls]
git = "https://github.com/wireapp/openmls"
branch = "feat/d20"

[patch.crates-io.openmls_traits]
git = "https://github.com/wireapp/openmls"
branch = "feat/d20"

[patch.crates-io.openmls_rust_crypto]
git = "https://github.com/wireapp/openmls"
branch = "feat/d20"

[patch.crates-io.openmls_basic_credential]
git = "https://github.com/wireapp/openmls"
branch = "feat/d20"

# [patch.crates-io.hpke-rs]
# git = "https://github.com/franziskuskiefer/hpke-rs.git"

# [patch.crates-io.hpke-rs-crypto]
# git = "https://github.com/franziskuskiefer/hpke-rs.git"

# [patch.crates-io.hpke-rs-rust-crypto]
# git = "https://github.com/franziskuskiefer/hpke-rs.git"

[patch.crates-io.tls_codec]
git = "https://github.com/wireapp/formats"
branch = "pcapriotti/fix-quic-vec-rw"

[dev-dependencies]
tempdir = "0.3"

[workspace]
