[package]
name = "mls-test-cli"
version = "0.11.0"
edition = "2021"

[dependencies]
openmls = "1.0.0"
openmls_traits = "0.2"
openmls_rust_crypto = "0.2"
openmls_basic_credential = "0.2"
tls_codec = { version = "0.4.1", features = ["derive", "serde", "mls"] }
futures-lite = "1.12"
async-trait = "0.1"
sha2 = { version = "0.10", features = ["oid"] }
hex = "0.4"
pkcs8 = "0.10"
x509-cert = { version = "0.2.5", features = ["builder"] }
der = "0.7"
ecdsa = { version = "0.16", features = ["der", "pkcs8"] }
p256 = { version = "0.13", features = ["pkcs8"] }
p384 = { version = "0.13", features = ["pkcs8"] }
ed25519-dalek = {version = "2.1", features = ["pkcs8"] }

base64 = "0.13.0"
uuid = "1.0.0-alpha"
clap = { version = "3", features = ["derive"] }
serde = "1.0.96"
serde_json = "1.0.96"

[patch.crates-io.openmls]
git = "https://github.com/wireapp/openmls"
branch = "feat/rfc9420"

[patch.crates-io.openmls_traits]
git = "https://github.com/wireapp/openmls"
branch = "feat/rfc9420"

[patch.crates-io.openmls_rust_crypto]
git = "https://github.com/wireapp/openmls"
branch = "feat/rfc9420"

[patch.crates-io.openmls_basic_credential]
git = "https://github.com/wireapp/openmls"
branch = "feat/rfc9420"

[workspace]
